<resources>
    <string name="app_name">BookingApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_content">View Content</string>
    <string name="form_content">Form Content</string>
    <string name="profile">Profile</string>
    <string name="content_form_elements">Content Form Elements</string>
    <string name="add_content">Add Content</string>
    <string name="submit_button">Submit button</string>
    <string name="reset_button">Reset button</string>
    <string name="title">Title</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="account">Account</string>
    <string name="all_post_list">All Post List</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_post">Personal Post</string>

    <!--ChangePwd-->
    <string name="button_change">Change</string>
    <string name="button_home">Home</string>
    <string name="label_change_pwd">Change your password</string>
    <string name="hint_enter_current_pwd">Please enter your current password</string>
    <string name="hint_enter_new_pwd">Enter new password</string>
    <string name="hint_confirm_pwd">Please retype your password</string>
    <!--ChangePwd-->

    <!--new post-->
    <string name="new_post">NEW POST</string>
    <string name="post_title">Title</string>
    <string name="post_skill">Skill</string>
    <string name="post_descripton">Description</string>
    <string name="post_quantity">Quantity</string>
    <string name="post_address">Address</string>
    <string name="button_add">Add</string>
    <string name="hint_enter_titile">Enter post title</string>
    <string name="hint_enter_skill">Enter skill</string>
    <string name="hint_enter_description">Enter description</string>
    <string name="hint_enter_quantity">Enter quantity</string>
    <string name="hint_enter_address">Enter address</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="edit_post">EDIT POST</string>
    <string name="button_ok">Ok</string>


    <string name="register">Register</string>
    <string name="object">Object</string>
    <string name="enter_your_company_school_name">Enter your company/school name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_company_school_phone_number">Enter your company/school phone number</string>
    <string name="enter_your_company_school_address">Enter your company/school address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="booking_app">Booking App</string>
    <string name="login">Login</string>

</resources>
