<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_allpost">

    <fragment
        android:id="@+id/nav_allpost"
        android:name="com.example.bookingapp.ui.allpostlist.AllPostList"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_all_post_list" />

    <fragment
        android:id="@+id/nav_personalpost"
        android:name="com.example.bookingapp.ui.personalpost.PersonalPost"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_personal_post" />

    <fragment
        android:id="@+id/nav_edit"
        android:name="com.example.bookingapp.ui.editprofile.EditProfile"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/nav_changepw"
        android:name="com.example.bookingapp.ui.changepassword.ChangPassword"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_chang_password" />
</navigation>